# potluck

./: .env.example  .gitignore  AGENTS.md  README.md  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  debug-ingest.yml  ingest.yml  publish-crate.yml
app/: app.config.ts
app/assets/css/: main.css
app/assets/data/: latest.json
app/components/: AISummaryButton.vue  AppHeader.vue  MarkdownRenderer.vue
app/pages/: index.vue  timeline.vue  today.vue
app/types/: database.types.ts
cli/: Cargo.toml  README.md
cli/src/: api.rs  app.rs  config.rs  event.rs  lib.rs  main.rs  placeholders.rs  ui.rs
docs/plans/: 2026-01-17-daily-briefing-refactor.md
public/data/: latest.json
scripts/: build-daily.ts
server/api/: ingest.post.ts  latest.get.ts  timeline.get.ts
server/utils/: ingest.ts
supabase/: config.toml
supabase/migrations/: 20260119000000_init_schema.sql  20260121000000_enable_rls.sql  20260121100000_add_indexes.sql
